--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,28 @@
 version: "3"
 services:
+
   backend:
+    container_name: go-admin
+    environment:
+      - VERSION=podman
     build:
-      dockerfile: Dockerfile
-      context: .
-      target: dev
+      dockerfile: DockerFile
     ports:
-      - 8000:3000
+      - 8000:8000
     volumes:
       - .:/app
+    depends_on:
+      - db
+  
+  db:
+    image: mysql:5.7.22
+    restart: always
+    environment:
+      MYSQL_DATABASE: ambassador
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - .dbdata:/var/lib/mysql
+    ports:
+      - 3306:3306
